--- a/pom.xml
+++ b/pom.xml
@@ -93,7 +93,7 @@
 		
 				<!-- LOGGING -->
 		<dependency>
-	<groupId>log4j</groupId>
+	<groupId>org.apache.logging.log4j</groupId>
 	<artifactId>log4j</artifactId>
 	<version>2.14.1</version>
 </dependency>
