--- a/pom.xml
+++ b/pom.xml
@@ -87,15 +87,15 @@
         <dependency>
             <groupId>commons-beanutils</groupId>
             <artifactId>commons-beanutils</artifactId>
-            <version>1.9.4</version>
+            <version>1.9.2</version>
             <type>jar</type>
         </dependency>
 		
 				<!-- LOGGING -->
 		<dependency>
-	<groupId>org.apache.logging.log4j</groupId>
+	<groupId>log4j</groupId>
 	<artifactId>log4j</artifactId>
-	<version>2.14.1</version>
+	<version>1.2.9</version>
 </dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -117,7 +117,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.13.1</version>
+			<version>4.7</version>
 			<scope>test</scope>
 		</dependency>
 
